<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/text_type"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/formula_bpm"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/title_bpm"
                android:textColor="@android:color/white" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/white" />


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/general_space"
                android:drawableLeft="@drawable/ic_guru"
                android:gravity="center"
                android:text="@string/text_bpm_resting"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/green" />

            <TextView
                android:id="@+id/fce_resting_ref_p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="/"
                android:textColor="@color/green" />

            <TextView
                android:id="@+id/fce_resting_ref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="50-80"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/green" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/green" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/general_space"
                android:drawableLeft="@drawable/ic_running"
                android:gravity="center"
                android:text="@string/text_bpm_footing"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/yellow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="65-75%"
                android:textColor="@color/yellow" />

            <TextView
                android:id="@+id/fce_footing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="130-150"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/yellow" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/general_space"
                android:drawableLeft="@drawable/ic_running"
                android:gravity="center"
                android:text="@string/text_bpm_marathon"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/yellow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="75-80%"
                android:textColor="@color/yellow" />

            <TextView
                android:id="@+id/fce_marathon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="150-160"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/yellow" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/general_space"
                android:drawableLeft="@drawable/ic_running"
                android:gravity="center"
                android:text="@string/text_bpm_semi"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/yellow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="80-85%"
                android:textColor="@color/yellow" />

            <TextView
                android:id="@+id/fce_semi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="160-170"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/yellow" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/yellow" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/general_space"
                android:drawableLeft="@drawable/ic_interval"
                android:gravity="center"
                android:text="@string/text_bpm_allure"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="85-90%"
                android:textColor="@color/orange" />

            <TextView
                android:id="@+id/fce_allure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="170-180"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/orange" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/orange" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/general_space"
                android:drawableLeft="@drawable/ic_exercise"
                android:gravity="center"
                android:text="@string/text_bpm_vma_l"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/reed" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="90-95%"
                android:textColor="@color/reed" />

            <TextView
                android:id="@+id/fce_vmal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="180-190"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/reed" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/general_space"
                android:drawableLeft="@drawable/ic_exercise"
                android:gravity="center"
                android:text="@string/text_bpm_vma_c"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/reed" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="95-100%"
                android:textColor="@color/reed" />

            <TextView
                android:id="@+id/fce_vmac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="190-200"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/reed" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/reed" />
    </TableLayout>

</LinearLayout>
