<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profil_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/general_space"
                android:layout_marginTop="@dimen/general_space"
                android:drawableLeft="@drawable/ic_action_user"
                android:drawablePadding="@dimen/general_space_icon"
                android:text="@string/title_profil"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/yellow" />

            <View
                android:id="@+id/profil_bar_title"
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_below="@id/profil_title"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@color/yellow" />

            <RadioGroup
                android:id="@+id/profil_sexe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profil_bar_title"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/sexe_male"
                    android:layout_margin="6dp"
                    android:background="@drawable/ic_male"
                    android:button="@drawable/radio_btn_selector" />

                <RadioButton
                    android:id="@+id/sexe_female"
                    android:layout_margin="6dp"
                    android:background="@drawable/ic_female"
                    android:button="@drawable/radio_btn_selector" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/profil_height_text"
                android:layout_below="@id/profil_bar_title"
                android:layout_margin="5dp"
                android:layout_toLeftOf="@id/profil_sexe"
                android:gravity="center"
                android:text="@string/text_sexe"
                android:textColor="@color/blue" />

            <EditText
                android:id="@+id/edit_year"
                android:layout_width="@dimen/general_width_edit_text"
                android:layout_height="wrap_content"
                android:layout_below="@id/profil_sexe"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:inputType="numberSigned"
                android:textColor="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/profil_height_text"
                android:layout_alignBaseline="@id/edit_year"
                android:layout_margin="9dp"
                android:layout_toLeftOf="@id/edit_year"
                android:text="@string/text_year"
                android:textColor="@color/blue" />

            <EditText
                android:id="@+id/profil_bpm_min"
                android:layout_width="@dimen/general_width_edit_text"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_year"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:inputType="numberSigned"
                android:textColor="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/profil_height_text"
                android:layout_alignBaseline="@id/profil_bpm_min"
                android:layout_margin="9dp"
                android:layout_toLeftOf="@id/profil_bpm_min"
                android:text="@string/text_bpm_min"
                android:textColor="@color/blue" />

            <EditText
                android:id="@+id/profil_bpm_max"
                android:layout_width="@dimen/general_width_edit_text"
                android:layout_height="@dimen/profil_height_text"
                android:layout_below="@id/profil_bpm_min"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:inputType="numberSigned"
                android:textColor="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/profil_bpm_max"
                android:layout_margin="9dp"
                android:layout_toLeftOf="@id/profil_bpm_max"
                android:text="@string/text_bpm_max"
                android:textColor="@color/blue" />

            <Button
                android:id="@+id/profil_valid"
                style="@style/button"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_below="@id/profil_bpm_max"
                android:layout_centerHorizontal="true"
                android:gravity="center_vertical|center_horizontal"
                android:text="@android:string/yes" />

        </RelativeLayout>
    </ScrollView>

</LinearLayout>