<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_action_info" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_about"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@color/blu" />

            <TextView
                android:id="@+id/link_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link_icon"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_action_info" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_info"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@color/blu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_info_about_bpm"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>